--- a/app/views/summits/show.html.erb
+++ b/app/views/summits/show.html.erb
@@ -4,7 +4,6 @@
 
 <div>
   <%= link_to "Edit this summit", edit_summit_path(@summit) %> |
-  <%= link_to "Back to summits", summits_path %>
+  <%= link_to "List All Summitings", summits_path %>
 
-  <%= button_to "Destroy this summit", @summit, method: :delete %>
 </div>
